fix: handle FT.HYBRID document format and improve fallback logging
FT.HYBRID returns documents with String values (ENCODED_OBJECT_MAP)
unlike FT.SEARCH which returns byte[]. Add hybridDocumentsToEntities()
to handle this format correctly for both JSON documents and Hash
entities. Include stack traces in fallback warning logs for debugging.